BFAST -- History of visible changes.

Copyright (C) 2008-2009, University of California - Los Angeles
See COPYING for copying conditions.

Please send bfast bug reports to nhomer@cs.ucla.edu

Version 0.4.3
* Fixed bug where aligning perfectly did not retain repeat masker 
information in the reference.

Version 0.4.2
* Added support for SAM 0.1.2 output.
* Added new utility brepair, which tries to align unpaired reads. I 
would not recommend using it since it does not in my analysis help
too much in practice and is inefficient.

Version 0.4.1
* Adding support for quality scores.  The input reads now must be in
fastq or multi-end fastq format.
* Adding support for multi end reads.
* The names of Output files of bmatches, balign, and subsequent 
programs are changed.

Version 0.3.4
* Updated balign, bmfconvert, bafconvert, and bsort output file names.
* Added gff output in bpostprocess and bafconvert.
* Fixed bug in bpostprocess when specifying the maximum number of 
nt errors.
* bsort now performs a threaded sort if the maximum number of entries
is large.
* removed some options to do with choosing paired end reads in 
bpostprocess, since they are easily misinterpreted.
* added a uniqueness score option in bpostprocess, which will replace
the alignment score with a ratio of the chosen alignment score versus
all other alignments' scores.

Version 0.3.3
* A quick fix to remove a memory leak that can causes crashes
when aligning nt space data.

Version 0.3.2
* Updating how we report color errors in .baf files.
* Added a new utility: bmergesorted that merges two files that
have been sorted by bsort.
* Updated bsort to print more information while sorting.  Also,
updated bsort to sort bpostprocess unpaired baf output.
* Update berrordistribution and bpairedenddist to accept any
number of input files.
* Changed bgeterrordistribution to berrordistribution.
* Updated bpostprocess to output unpaired reads when one end
has ambiguity.