@@ -2,11 +2,12 @@
 #define DEFINITIONS_H_
 
 #define MIN_FILTER 0
-#define MAX_FILTER 3
+#define MAX_FILTER 4
 enum {NoFiltering, 		/* 0 */
 	AllNotFiltered, 	/* 1 */
 	Unique, 			/* 2 */
 	BestScore, 			/* 3 */
+	BestScoreAll,		/* 4 */
 };
 enum {First, Second};
 enum {NoneFound, Found, ContigAb, Unpaired, Inversion, OutsideBounds};
