@@ -6,6 +6,8 @@ See COPYING for copying conditions.
 Please send bfast bug reports to nhomer@cs.ucla.edu
 
 Version 0.4.3
+* Added an option to bpostprocess where all "best scoring" alignments
+can be returned.
 * Fixed bug where aligning perfectly did not retain repeat masker 
 information in the reference.
 
